Tune session JVMs and restore terminal on exit